--- a/resources/rudi/player/player.html
+++ b/resources/rudi/player/player.html
@@ -61,6 +61,11 @@
             return player.getPlayerState();
         }
 
+        function setVolume(volume)
+        {
+            player.setVolume(volume);
+        }
+
         /*function onPlayerReady(event) {
             setInterval(function() {
                 let currentTime = player.getCurrentTime();
