--- a/resources/rudi/player/player.html
+++ b/resources/rudi/player/player.html
@@ -58,6 +58,8 @@
         function load(id)
         {
             player.loadVideoById(id);
+
+            started = false;
         }
 
         function getTime()
