--- a/resources/rudi/player/player.html
+++ b/resources/rudi/player/player.html
@@ -73,10 +73,12 @@
         }
 
         function onPlayerStateChange(event) {
-            if (event.data != 0 || event.data != 1)
+            if (event.data != 0 && event.data != 1)
                 return;
-            if (started == true && event.data == 0)
+            if (started == true && event.data == 1)
                 return;
+            if (started == false && event.data == 1)
+                started = true;
             
             playerStateBridge.run(event.data);
         }
