--- a/resources/rudi/player/player.html
+++ b/resources/rudi/player/player.html
@@ -35,7 +35,7 @@
                     modestbranding: 1
                 },
                 events: {
-                    'onStateChange': onPlayerStateChange()
+                    'onStateChange': onPlayerStateChange
                 }
             });
         }
