--- a/resources/rudi/player/player.html
+++ b/resources/rudi/player/player.html
@@ -78,7 +78,7 @@
         }
 
         function onPlayerStateChange(event) {
-            if (event.data != 0 && event.data != 1)
+            if (event.data != 0 || event.data != 1)
                 return;
             if (started == true && event.data == 1)
                 return;
