--- a/resources/rudi/player/player.html
+++ b/resources/rudi/player/player.html
@@ -78,10 +78,12 @@
         }
 
         function onPlayerStateChange(event) {
-            if (started == true && event.data == 1){
-                return;}
-            if (started == false && event.data == 1){
-                started = true;}
+            if (event.data != 0 && event.data != 1)
+                return;
+            if (started == true && event.data == 1)
+                return;
+            if (started == false && event.data == 1)
+                started = true;
             
             playerStateBridge.run(event.data);
         }
