--- a/resources/rudi/player/animeplayers/jutsu.html
+++ b/resources/rudi/player/animeplayers/jutsu.html
@@ -10,6 +10,6 @@
         </script>
     </head>
     <body>
-        <video id="player"></video>
+        <video id="player" autoplay></video>
     </body>
 </html>
