--- a/pages/Rudi.html
+++ b/pages/Rudi.html
@@ -143,7 +143,7 @@
             <span class="typing-animation"></span>
         </h2>
         <p>Протестируйте бета-версию программы Rudi для совместного просмотра видео уже сейчас.</p>
-        <a href="https://www.dropbox.com/scl/fi/jsvfqn9tuu0wxm1gwkm9s/rudi_installer.exe?rlkey=nvw19xywtmjl6gcmvp2yhhl83&dl=1" class="download-button">Скачать</a>
+        <a href="https://www.dropbox.com/scl/fi/s97abmfj6htto49rtey0r/rudi_installer.exe?rlkey=x3jtcnj05995k4w6tpovkro7r&st=3ls566ei&dl=1" class="download-button">Скачать</a>
     </main>
     <script>
         const phrases = ["Новые эмоции.", "Новые впечатления.", "Проводите время вместе."];
