--- a/pages/Rudi.html
+++ b/pages/Rudi.html
@@ -143,7 +143,7 @@
             <span class="typing-animation"></span>
         </h2>
         <p>Протестируйте бета-версию программы Rudi для совместного просмотра видео уже сейчас.</p>
-        <a href="https://www.dropbox.com/scl/fi/wb94cnrglssp40527l8wz/rudi_installer.exe?rlkey=l6gan2dldznjjhgmfdcud8l3x&st=20hlwlhi&dl=1" class="download-button">Скачать</a>
+        <a href="https://www.dropbox.com/scl/fi/d8dp8g00rb94ojnnn9plo/rudi_installer.exe?rlkey=srar785f4xugedk2l34168nmq&st=4vnkmlfg&dl=1" class="download-button">Скачать</a>
     </main>
     <script>
         const phrases = ["Новые эмоции.", "Новые впечатления.", "Проводите время вместе."];
