--- a/pages/Rudi.html
+++ b/pages/Rudi.html
@@ -143,7 +143,7 @@
             <span class="typing-animation"></span>
         </h2>
         <p>Протестируйте бета-версию программы Rudi для совместного просмотра видео уже сейчас.</p>
-        <a href="https://www.dropbox.com/scl/fi/d8dp8g00rb94ojnnn9plo/rudi_installer.exe?rlkey=srar785f4xugedk2l34168nmq&st=4vnkmlfg&dl=1" class="download-button">Скачать</a>
+        <a href="https://www.dropbox.com/scl/fi/m8uek8mhqr0oh2pjn4nuw/rudi_installer.exe?rlkey=4bxjfxg2th5xr6slzd95ks52j&st=ciqrq92z&dl=1" class="download-button">Скачать</a>
     </main>
     <script>
         const phrases = ["Новые эмоции.", "Новые впечатления.", "Проводите время вместе."];
