--- a/pages/Rudi.html
+++ b/pages/Rudi.html
@@ -142,8 +142,8 @@
         <h2>
             <span class="typing-animation"></span>
         </h2>
-        <p>Протестируйте бета-версию программы Rudi для совместного просмотра видео уже сейчас.</p>
-        <a href="https://www.dropbox.com/scl/fi/5thj9o8fkcvlbhnk6pf9l/rudi_installer.exe?rlkey=3p0bky2ub4yjh2jtd9zum3phg&st=93hklfig&dl=1" class="download-button">Скачать</a>
+        <p>Протестируйте программу Rudi для совместного просмотра видео уже сейчас.</p>
+        <a href="https://www.dropbox.com/scl/fi/1u2n0cy6s6eb389dw6df8/rudi_installer.exe?rlkey=i8o7wmi8tv66meskjjz2n7d43&st=uiukytd7&dl=1" class="download-button">Скачать</a>
     </main>
     <script>
         const phrases = ["Новые эмоции.", "Новые впечатления.", "Проводите время вместе."];
