--- a/pages/Rudi.html
+++ b/pages/Rudi.html
@@ -143,7 +143,7 @@
             <span class="typing-animation"></span>
         </h2>
         <p>Протестируйте программу Rudi для совместного просмотра видео уже сейчас.</p>
-        <a href="https://www.dropbox.com/scl/fi/grb8x0i14l6rkaquwr11s/rudi_installer.exe?rlkey=8d6zluwlsbu8y3o012rfoo1ur&st=svi1dpbo&dl=1" class="download-button">Скачать</a>
+        <a href="https://www.dropbox.com/scl/fi/vez17ngi6kixfhwr0pjh2/rudi_installer.exe?rlkey=tqivblbgf7to818r6455wx7zr&st=nd44e7no&dl=1" class="download-button">Скачать</a>
     </main>
     <script>
         const phrases = ["Новые эмоции.", "Новые впечатления.", "Проводите время вместе."];
