--- a/pages/Rudi.html
+++ b/pages/Rudi.html
@@ -143,7 +143,7 @@
             <span class="typing-animation"></span>
         </h2>
         <p>Протестируйте программу Rudi для совместного просмотра видео уже сейчас.</p>
-        <a href="https://www.dropbox.com/scl/fi/w8397woeegeg2wwq16gst/rudi_installer.exe?rlkey=dvb3ra4ocpq8ls0tt6iotrfac&st=022c47dp&dl=1" class="download-button">Скачать</a>
+        <a href="https://www.dropbox.com/scl/fi/91118y0yal23fmolg4qpl/rudi_installer.exe?rlkey=u5mprnjzgi3ni8k26m8ev6wgu&st=awy1f3x6&dl=1" class="download-button">Скачать</a>
     </main>
     <script>
         const phrases = ["Новые эмоции.", "Новые впечатления.", "Проводите время вместе."];
