--- a/pages/Rudi.html
+++ b/pages/Rudi.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
     <meta charset="UTF-8">
@@ -143,7 +143,7 @@
             <span class="typing-animation"></span>
         </h2>
         <p>Протестируйте программу Rudi для совместного просмотра видео уже сейчас.</p>
-        <a href="https://www.dropbox.com/scl/fi/dk7dozer8lf5t1p40iw6l/rudi_installer.exe?rlkey=8kjw9ce4269hxqwgmna73jmdg&st=h0ob0ttr&dl=1" class="download-button">Скачать</a>
+        <a href="https://www.dropbox.com/scl/fi/817xukxdxb9zmippf86uc/rudi_installer.exe?rlkey=69dltmc5qebovjlm2mx9v84qy&st=qdfi95d8&dl=1" class="download-button">Скачать</a>
     </main>
     <script>
         const phrases = ["Новые эмоции.", "Новые впечатления.", "Проводите время вместе."];
