--- a/pages/Rudi.html
+++ b/pages/Rudi.html
@@ -143,7 +143,7 @@
             <span class="typing-animation"></span>
         </h2>
         <p>Протестируйте программу Rudi для совместного просмотра видео уже сейчас.</p>
-        <a href="https://www.dropbox.com/scl/fi/8dniltn0lib6s7x13iyn1/rudi_installer.exe?rlkey=dr90migifwxeattksaed67ya6&st=ayl1kkrm&dl=1" class="download-button">Скачать</a>
+        <a href="https://www.dropbox.com/scl/fi/jwgt8zrg54oicwxmw6qun/rudi_installer.exe?rlkey=b2gcyz9xkredkkzg2ka007cxu&st=02hmb7jn&dl=1" class="download-button">Скачать</a>
     </main>
     <script>
         const phrases = ["Новые эмоции.", "Новые впечатления.", "Проводите время вместе."];
