--- a/resources/rudi/player/player.html
+++ b/resources/rudi/player/player.html
@@ -34,6 +34,7 @@
             });
             
             document.getElementById('player').sandbox = 'allow-scripts allow-same-origin';
+            player.focus()
         }
         
         function play()
