--- a/pages/Rudi.html
+++ b/pages/Rudi.html
@@ -143,7 +143,7 @@
             <span class="typing-animation"></span>
         </h2>
         <p>Протестируйте программу Rudi для совместного просмотра видео уже сейчас.</p>
-        <a href="https://www.dropbox.com/scl/fi/dw4f8ryftmhhuc81nmhfk/rudi_installer.exe?rlkey=6702jbqalg0fnfmy5q6nd7jyj&st=4iztc9s2&dl=1" class="download-button">Скачать</a>
+        <a href="https://www.dropbox.com/scl/fi/azi3k096leuaut5uqv2bb/rudi_installer.exe?rlkey=28a4gvrp44jrfdr7ye20pkyiw&st=yfzx5vps&dl=1" class="download-button">Скачать</a>
     </main>
     <script>
         const phrases = ["Новые эмоции.", "Новые впечатления.", "Проводите время вместе."];
