--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
     <meta name="description" content="Веб-сайт queinu // Откройте для себя новый опыт. Попробуйте программы для вашего компьютера от queinu. От скриншотера до совместного просмотра видео.">
-    <meta name="keywords" content="видео, вместе, queinu, квину, скриншот, скриншотер, зед шот, zed shot, скачать, горячие углы, windows, виндовс, винда"
+    <meta name="keywords" content="видео, вместе, queinu, квину, скриншот, скриншотер, зед шот, zed shot, скачать, горячие углы, windows, виндовс, винда">
 	<title>queinu</title>
     <link type="image/png" sizes="16x16" rel="icon" href="icons/queinuappsportalicon.ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
