--- a/pages/Rudi.html
+++ b/pages/Rudi.html
@@ -143,7 +143,7 @@
             <span class="typing-animation"></span>
         </h2>
         <p>Протестируйте программу Rudi для совместного просмотра видео уже сейчас.</p>
-        <a href="https://www.dropbox.com/scl/fi/2lvczwnqyug81qfgl1dio/rudi_installer.exe?rlkey=k3nei8wta7yf0zvkhmwqrrjsm&st=rvupl4r0&dl=1" class="download-button">Скачать</a>
+        <a href="https://www.dropbox.com/scl/fi/sanfiovpz9yowb6zfkfy1/rudi_installer.exe?rlkey=mn4277xgtj0e93v2s10rzibvn&st=233lxnec&dl=1" class="download-button">Скачать</a>
     </main>
     <script>
         const phrases = ["Новые эмоции.", "Новые впечатления.", "Проводите время вместе."];
