--- a/pages/Rudi.html
+++ b/pages/Rudi.html
@@ -142,8 +142,8 @@
         <h2>
             <span class="typing-animation"></span>
         </h2>
-        <p>Протестируйте программу Rudi для совместного просмотра видео уже сейчас.</p>
-        <a href="https://www.dropbox.com/scl/fi/sanfiovpz9yowb6zfkfy1/rudi_installer.exe?rlkey=mn4277xgtj0e93v2s10rzibvn&st=233lxnec&dl=1" class="download-button">Скачать</a>
+        <p>Скачайте программу Rudi для совместного просмотра видео уже сейчас.</p>
+        <a href="https://www.dropbox.com/scl/fi/zbgla4eo9boac5o37di3d/rudi_installer.exe?rlkey=yffaxiihegj831awwfus5xd35&st=ilisy5ph&dl=1" class="download-button">Скачать</a>
     </main>
     <script>
         const phrases = ["Новые эмоции.", "Новые впечатления.", "Проводите время вместе."];
