Rudi new version

--- a/pages/Rudi.html
+++ b/pages/Rudi.html
@@ -143,7 +143,7 @@
             <span class="typing-animation"></span>
         </h2>
         <p>Скачайте программу Rudi для совместного просмотра видео уже сейчас.</p>
-        <a href="https://www.dropbox.com/scl/fi/d9q1bd7i2pxjkm3hrvp71/rudi_installer.exe?rlkey=bm0s5nt5y39wbtohlmu2eqdl6&st=4f69vzwa&dl=1" class="download-button">Скачать</a>
+        <a href="https://www.dropbox.com/scl/fi/uw0g7o1rrvspjmwpiacy4/rudi_installer.exe?rlkey=5zxjsmfnu2pv8muvz9gq5k8kh&st=8syixgya&dl=1" class="download-button">Скачать</a>
     </main>
     <script>
         const phrases = ["Новые эмоции.", "Новые впечатления.", "Проводите время вместе."];
