--- a/pages/Rudi.html
+++ b/pages/Rudi.html
@@ -143,7 +143,7 @@
             <span class="typing-animation"></span>
         </h2>
         <p>Скачайте программу Rudi для совместного просмотра видео уже сейчас.</p>
-        <a href="https://www.dropbox.com/scl/fi/36r07w01k0jlma85md5u6/rudi_installer.exe?rlkey=8xybh5z9fh0tg1ma5l9x6fqd6&st=8dd02sss&dl=1" class="download-button">Скачать</a>
+        <a href="https://www.dropbox.com/scl/fi/vp9yws1132ojd4difltkl/rudi_installer.exe?rlkey=x2lpdomqhavznwglkz6htpynj&dl=1" class="download-button">Скачать</a>
     </main>
     <script>
         const phrases = ["Новые эмоции.", "Новые впечатления.", "Проводите время вместе."];
