--- a/testDir/test.html
+++ b/testDir/test.html
@@ -1,12 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <script src="/home/queinu/Документы/testDir/playerjs.js" type="text/javascript"></script>
+        <script src="https://zzedovec.github.io/testDir/playerjs.js" type="text/javascript"></script>
     </head>
     <body>
         <div id="player"></div>
-        <script>
-            var player = new Playerjs({id:'player'});
-        </script>
     </body>
 </html>
