--- a/resources/rudi/player/PlayerJS.html
+++ b/resources/rudi/player/PlayerJS.html
@@ -2,6 +2,20 @@
 <html>
     <head>
         <title>queinu PlayerJS</title>
+        <style>
+            body, html {
+                height: 100%;
+                width: 100%;
+                margin: 0;
+            }
+            #player-view{
+                position: absolute;
+                top: 0;
+                left: 0;
+                width: 100%;
+                height: 100%;
+            }
+        </style>
         <script src="https://zzedovec.github.io/resources/rudi/player/playerjs.js" type="text/javascript"></script>
     </head>
     <body>
