--- a/resources/rudi/player/ytplayer.html
+++ b/resources/rudi/player/ytplayer.html
@@ -29,7 +29,9 @@
                     iv_load_policy: 3,
                     fs: 0,
                     autoplay: 1,
-                    modestbranding: 1
+                    modestbranding: 1,
+	            disablekb: 1,
+		    controls: 0
                 }
             });
             
