--- a/pages/Rudi.html
+++ b/pages/Rudi.html
@@ -143,7 +143,7 @@
             <span class="typing-animation"></span>
         </h2>
         <p>Скачайте программу Rudi для совместного просмотра видео уже сейчас.</p>
-        <a href="hhttps://www.dropbox.com/scl/fi/u75mwspd5bkq8v5d0kkff/rudi_installer.exe?rlkey=ponkz27vkxfqszfwuh46uf9av&st=ihls6jls&dl=1" class="download-button">Скачать</a>
+        <a href="https://www.dropbox.com/scl/fi/396z7b1suttkv42wd46jm/rudi_installer.exe?rlkey=jg65dc85qywonnthd7l998vqb&st=fj25wl56&dl=1" class="download-button">Скачать</a>
     </main>
     <script>
         const phrases = ["Новые эмоции.", "Новые впечатления.", "Проводите время вместе."];
