--- a/pages/Rudi.html
+++ b/pages/Rudi.html
@@ -143,7 +143,7 @@
             <span class="typing-animation"></span>
         </h2>
         <p>Скачайте программу Rudi для совместного просмотра видео уже сейчас.</p>
-        <a href="https://www.dropbox.com/scl/fi/5vks4f654l623nwghdfhu/rudi_installer.exe?rlkey=vhxoyw8a45apskopuqvtuct1m&st=1bkpb01y&dl=1" class="download-button">Скачать</a>
+        <a href="https://www.dropbox.com/scl/fi/m12do7v5t35qwox2xbqt4/rudi_installer.exe?rlkey=f5j38zww63zt6l23ackzx5e50&st=8227p8jz&dl=1" class="download-button">Скачать</a>
     </main>
     <script>
         const phrases = ["Новые эмоции.", "Новые впечатления.", "Проводите время вместе."];
