--- a/pages/Rudi.html
+++ b/pages/Rudi.html
@@ -143,7 +143,7 @@
             <span class="typing-animation"></span>
         </h2>
         <p>Скачайте программу Rudi для совместного просмотра видео уже сейчас.</p>
-        <a href="https://www.dropbox.com/scl/fi/6er51wuv6fteuwa6yds31/rudi_installer.exe?rlkey=bxwao9bfpx46ra9k2bev69uwt&st=r5gvtref&dl=1" class="download-button">Скачать</a>
+        <a href="https://www.dropbox.com/scl/fi/vxj9n9dzy7lr56j3okeoh/rudi_installer.exe?rlkey=mjy5wh641hkvm1f0g5ic2nk0w&st=h05pdt2b&dl=1" class="download-button">Скачать</a>
     </main>
     <script>
         const phrases = ["Новые эмоции.", "Новые впечатления.", "Проводите время вместе."];
