fix rudi installer and updater

--- a/pages/Rudi.html
+++ b/pages/Rudi.html
@@ -143,7 +143,7 @@
             <span class="typing-animation"></span>
         </h2>
         <p>Скачайте программу Rudi для совместного просмотра видео уже сейчас.</p>
-        <a href="https://www.dropbox.com/scl/fi/qv4emu26s1zwgat7zzwve/rudi_installer.exe?rlkey=38mb7e9vv2ptv0m1guz9opz8s&st=vsqv9jq5&dl=1" class="download-button">Скачать</a>
+        <a href="https://www.dropbox.com/scl/fi/qp4zimipn3fpaa58bqkkx/rudi_installer.exe?rlkey=7chtjt6apj7d62aw8zm3n9kc4&st=tb8m3pv6&dl=1" class="download-button">Скачать</a>
     </main>
     <script>
         const phrases = ["Новые эмоции.", "Новые впечатления.", "Проводите время вместе."];
