--- a/pages/rudiThanks.html
+++ b/pages/rudiThanks.html
@@ -64,7 +64,7 @@
       <p>Или откройте терминал в папке со скачанным установщиком и выполните:</p>
 
       <div class="command">
-        chmod +x rudi_installer && rudi_installer
+        chmod +x rudi_installer && ./rudi_installer
       </div>
     </div>
     <script>
