OFME Linux Launcher add

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="robots" content="index, follow">
         <meta name="description" content="queinu website">
-        <meta name="keywords" content="queinu,rudi,руди,видео,вместе,аниме,фильмы,zzedovec,truckersmp,linux,launcher,quinstaller,installer,установщик,лаунчер,тракерсмп,линукс">
+        <meta name="keywords" content="queinu,rudi,руди,видео,вместе,аниме,фильмы,zzedovec,online,fix,онлайн,фикс,truckersmp,linux,launcher,quinstaller,installer,установщик,лаунчер,тракерсмп,линукс">
         <title>queinu</title>
         <link rel="stylesheet" type="text/css" href="css/style.css">
         <link rel="icon" type="image/x-icon" href="https://zzedovec.github.io/icons/queinuappsportalicon.ico">
@@ -60,6 +60,15 @@
             </div>
 
             <img src="https://github.com/ZzEdovec/truckersmp-linux/raw/main/launcher-window.png" class="progImg" onmousemove="tiltImage(event)" onmouseleave="resetTilt(event)">
+        </div>
+        <div class="container" id="ofme-linux">
+            <h1 class="progName">OnlineFix Launcher<br>for Linux</h1>
+            <h3 class="progDesc">Играйте в игры с OnlineFix также,<br>как на Windows</h3>
+            <div class="buttonContainer">
+                <button class="progButton" onclick="window.location.href='pages/ofmeThanks'">Скачать</button>
+            </div>
+
+            <img src="images/ofmeBanner" class="progImg" onmousemove="tiltImage(event)" onmouseleave="resetTilt(event)">
         </div>
         <div class="container" id="quinstaller">
             <h1 class="progName">quInstaller</h1>
