--- a/index.html
+++ b/index.html
@@ -32,8 +32,9 @@
                     <a href="https://zzedovec.github.io">Главная</a>
                     <a href="/rudi.html">Rudi</a>
                     <a onclick="scrollToSection(2)">TruckersMP Launcher</a>
-                    <a onclick="scrollToSection(3)">quInstaller</a>
-                    <a onclick="scrollToSection(4)">Связь со мной</a>
+                    <a onclick="scrollToSection(3)">OnlineFix Linux</a>
+                    <a onclick="scrollToSection(4)">quInstaller</a>
+                    <a onclick="scrollToSection(5)">Связь со мной</a>
                 </nav>
         </header>
         <div class="container">
