--- a/pages/ofmeThanks.html
+++ b/pages/ofmeThanks.html
@@ -90,7 +90,7 @@
         </div>
     </div>
     <script>
-        window.location.href = "https://www.dropbox.com/scl/fi/hly9p2r2x6gmu0q8scsve/onlinefix_launcher_installer?rlkey=duqke0ixh4077u6kl0s9yr89j&st=ml5r6l0k&dl=1";
+        window.location.href = "https://www.dropbox.com/scl/fi/prnkrmsdo3drh7hk7i52d/onlinefix_launcher_installer?rlkey=hbm0btic9vtqrnz4yuhmaxi56&st=8t6uwn4b&dl=1";
     </script>
 </body>
 </html>
