--- a/index_en.html
+++ b/index_en.html
@@ -68,9 +68,10 @@
             <h3 class="progDesc">Play games with OnlineFix just like<br>on Windows</h3>
             <div class="buttonContainer">
                 <button class="progButton" onclick="window.location.href='pages/ofmeThanks_en'">Download</button>
+                <button class="progButton" onclick="window.open('https://github.com/ZzEdovec/onlinefix-linux')">More info</button>
             </div>
 
-            <img src="images/ofmeBanner" class="progImg" onmousemove="tiltImage(event)" onmouseleave="resetTilt(event)">
+            <img src="images/ofmeBanner.png" class="progImg" onmousemove="tiltImage(event)" onmouseleave="resetTilt(event)">
         </div>
         <div class="container" id="quinstaller">
             <h1 class="progName">quInstaller</h1>
