--- a/pages/ofmeThanks_en.html
+++ b/pages/ofmeThanks_en.html
@@ -67,27 +67,8 @@
             chmod +x onlinefix_launcher_installer && ./onlinefix_launcher_installer
         </div>
 
-        <p>The launcher requires the following dependencies: <strong>protontricks</strong>, <strong>ffmpeg</strong>, and <strong>7zip</strong>. Install them using the commands below for your distribution:</p>
-
-        <h3>Ubuntu and derivatives:</h3>
-        <div class="command">
-            sudo apt install protontricks ffmpeg p7zip-full
-        </div>
-
-        <h3>Solus:</h3>
-        <div class="command">
-            sudo eopkg install protontricks ffmpeg p7zip
-        </div>
-
-        <h3>Fedora:</h3>
-        <div class="command">
-            sudo dnf install protontricks ffmpeg p7zip
-        </div>
-
-        <h3>Arch Linux:</h3>
-        <div class="command">
-            sudo pacman -S protontricks ffmpeg 7zip
-        </div>
+        <p>The launcher requires the following dependencies: <strong>protontricks</strong>, <strong>ffmpeg</strong>, and <strong>7zip</strong>.</p>
+        <p>You can find instructions for installing dependencies in the <a href="https://github.com/ZzEdovec/onlinefix-linux/tree/main#installing-dependencies" target="_blank">documentation on GitHub</a>.</p>
     </div>
     <script>
         window.location.href = "https://www.dropbox.com/scl/fi/9z0oed8mhzki37s3rgnqf/onlinefix_launcher_installer?rlkey=xvlvavsmxlfs8sav7a2rvvfrm&st=zaxq990r&dl=1";
