--- a/pages/ofmeThanks.html
+++ b/pages/ofmeThanks.html
@@ -67,27 +67,8 @@
             chmod +x onlinefix_launcher_installer && ./onlinefix_launcher_installer
         </div>
 
-        <p>Для работы лаунчера требуются следующие зависимости: <strong>protontricks</strong>, <strong>ffmpeg</strong> и <strong>7zip</strong>. Установите их, используя команды ниже для вашего дистрибутива:</p>
-
-        <h3>Ubuntu и производные:</h3>
-        <div class="command">
-            sudo apt install protontricks ffmpeg p7zip-full
-        </div>
-
-        <h3>Solus:</h3>
-        <div class="command">
-            sudo eopkg install protontricks ffmpeg p7zip
-        </div>
-
-        <h3>Fedora:</h3>
-        <div class="command">
-            sudo dnf install protontricks ffmpeg p7zip
-        </div>
-
-        <h3>Arch Linux:</h3>
-        <div class="command">
-            sudo pacman -S protontricks ffmpeg 7zip
-        </div>
+        <p>Для работы лаунчера требуются следующие зависимости: <strong>protontricks</strong>, <strong>ffmpeg</strong> и <strong>7zip</strong>.</p>
+        <p>Инструкции по установке зависимостей вы можете найти в <a href="https://github.com/ZzEdovec/onlinefix-linux/blob/main/README_ru.md#%D1%83%D1%81%D1%82%D0%B0%D0%BD%D0%BE%D0%B2%D0%BA%D0%B0-%D0%B7%D0%B0%D0%B2%D0%B8%D1%81%D0%B8%D0%BC%D0%BE%D1%81%D1%82%D0%B5%D0%B9" target="_blank">документации на GitHub</a>.</p>
     </div>
     <script>
         window.location.href = "https://www.dropbox.com/scl/fi/9z0oed8mhzki37s3rgnqf/onlinefix_launcher_installer?rlkey=xvlvavsmxlfs8sav7a2rvvfrm&st=zaxq990r&dl=1";
