--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="robots" content="index, follow">
+        <meta name="yandex-verification" content="b1b3bced4fd04aa7" />
         <meta name="description" content="queinu website">
         <meta name="keywords" content="queinu,rudi,руди,видео,вместе,аниме,фильмы,zzedovec,online,fix,онлайн,фикс,truckersmp,linux,launcher,quinstaller,installer,установщик,лаунчер,тракерсмп,линукс">
         <title>queinu</title>
