--- a/pages/ofmeThanks.html
+++ b/pages/ofmeThanks.html
@@ -71,7 +71,7 @@
         <p>Инструкции по установке зависимостей вы можете найти в <a href="https://github.com/ZzEdovec/onlinefix-linux/blob/main/README_ru.md#%D1%83%D1%81%D1%82%D0%B0%D0%BD%D0%BE%D0%B2%D0%BA%D0%B0-%D0%B7%D0%B0%D0%B2%D0%B8%D1%81%D0%B8%D0%BC%D0%BE%D1%81%D1%82%D0%B5%D0%B9" target="_blank">документации на GitHub</a>.</p>
     </div>
     <script>
-        window.location.href = "https://www.dropbox.com/scl/fi/9z0oed8mhzki37s3rgnqf/onlinefix_launcher_installer?rlkey=xvlvavsmxlfs8sav7a2rvvfrm&st=zaxq990r&dl=1";
+        window.location.href = "https://www.dropbox.com/scl/fi/vohywb8t5qgc1b48tek1x/onlinefix_launcher_installer?rlkey=wg3vh6ls3eroxb6d4t0wvoebp&st=30meyr9l&dl=1";
     </script>
 </body>
 </html>
