--- a/pages/ofmeThanks_en.html
+++ b/pages/ofmeThanks_en.html
@@ -71,7 +71,7 @@
         <p>You can find instructions for installing dependencies in the <a href="https://github.com/ZzEdovec/onlinefix-linux/tree/main#installing-dependencies" target="_blank">documentation on GitHub</a>.</p>
     </div>
     <script>
-        window.location.href = "https://www.dropbox.com/scl/fi/vohywb8t5qgc1b48tek1x/onlinefix_launcher_installer?rlkey=wg3vh6ls3eroxb6d4t0wvoebp&st=30meyr9l&dl=1";
+        window.location.href = "https://www.dropbox.com/scl/fi/50amz2km3vffj45tdt1hx/onlinefix_launcher_installer?rlkey=ct6thr48tc9zqpdseyr3iq3wd&st=v80nu3px&dl=1";
     </script>
 </body>
 </html>
