--- a/pages/ofmeThanks.html
+++ b/pages/ofmeThanks.html
@@ -71,7 +71,7 @@
         <p>Инструкции по установке зависимостей вы можете найти в <a href="https://github.com/ZzEdovec/onlinefix-linux/blob/main/README_ru.md#%D1%83%D1%81%D1%82%D0%B0%D0%BD%D0%BE%D0%B2%D0%BA%D0%B0-%D0%B7%D0%B0%D0%B2%D0%B8%D1%81%D0%B8%D0%BC%D0%BE%D1%81%D1%82%D0%B5%D0%B9" target="_blank">документации на GitHub</a>.</p>
     </div>
     <script>
-        window.location.href = "https://www.dropbox.com/scl/fi/50amz2km3vffj45tdt1hx/onlinefix_launcher_installer?rlkey=ct6thr48tc9zqpdseyr3iq3wd&st=v80nu3px&dl=1";
+        window.location.href = "https://www.dropbox.com/scl/fi/9wq94cia489xo6blu3t3c/onlinefix_launcher_installer?rlkey=ci3iww3dzf8xucp4l9rzkn2az&st=x2r76j6j&dl=1";
     </script>
 </body>
 </html>
