--- a/pages/ofmeThanks_en.html
+++ b/pages/ofmeThanks_en.html
@@ -67,11 +67,11 @@
             chmod +x onlinefix_launcher_installer && ./onlinefix_launcher_installer
         </div>
 
-        <p>The launcher requires the following dependencies: <strong>protontricks</strong>, <strong>ffmpeg</strong>, and <strong>7zip</strong>.</p>
+        <p>The launcher requires the following dependencies: <strong>protontricks</strong> and <strong>ffmpeg</strong>.</p>
         <p>You can find instructions for installing dependencies in the <a href="https://github.com/ZzEdovec/onlinefix-linux/tree/main#installing-dependencies" target="_blank">documentation on GitHub</a>.</p>
     </div>
     <script>
-        window.location.href = "https://www.dropbox.com/scl/fi/9wq94cia489xo6blu3t3c/onlinefix_launcher_installer?rlkey=ci3iww3dzf8xucp4l9rzkn2az&st=x2r76j6j&dl=1";
+        window.location.href = "https://www.dropbox.com/scl/fi/5fr9i8t7lk3os2ogt8uv7/onlinefix_launcher_installer?rlkey=u9walm76k9tyxur4g3j5cbbmx&st=hhmwzmxr&dl=1";
     </script>
 </body>
 </html>
