--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="robots" content="index, follow">
         <meta name="yandex-verification" content="b1b3bced4fd04aa7" />
-        <meta name="description" content="queinu website">
+        <meta name="description" content="Сайт queinu — Rudi, TruckersMP Launcher, OnlineFix Linux, quInstaller и другие приложения для вашего удобства.">
         <meta name="keywords" content="queinu,rudi,руди,видео,вместе,аниме,фильмы,zzedovec,online,fix,онлайн,фикс,truckersmp,linux,launcher,quinstaller,installer,установщик,лаунчер,тракерсмп,линукс">
         <title>queinu</title>
         <link rel="stylesheet" type="text/css" href="css/style.css">
