--- a/index_en.html
+++ b/index_en.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="robots" content="index, follow">
-        <meta name="description" content="queinu website">
+        <meta name="description" content="queinu's website — Rudi, TruckersMP Launcher, OnlineFix Linux, quInstaller, and other applications for your convenience.">
         <meta name="keywords" content="queinu,rudi,руди,видео,вместе,аниме,фильмы,zzedovec,online,fix,truckersmp,linux,launcher,quinstaller,installer,установщик,лаунчер,тракерсмп,линукс">
         <title>queinu</title>
         <link rel="stylesheet" type="text/css" href="css/style.css">
