--- a/rudi.html
+++ b/rudi.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="robots" content="index, follow">
-        <meta name="description" content="Rudi - смотрите видео вместе">
+        <meta name="description" content="Rudi - смотрите видео, аниме и фильмы вместе с друзьями и любимыми.">
         <meta name="keywords" content="rudi,руди,видео,вместе,аниме,фильмы">
         <title>Rudi</title>
         <link rel="stylesheet" type="text/css" href="css/style.css">
