--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset="UTF-8">
-        <meta name="robots" content="index, follow">
+        <meta charset="UTF-8" />
+        <meta name="robots" content="index, follow" />
         <meta name="yandex-verification" content="b1b3bced4fd04aa7" />
-        <meta name="description" content="Сайт queinu — Rudi, TruckersMP Launcher, OnlineFix Linux, quInstaller и другие приложения для вашего удобства.">
-        <meta name="keywords" content="queinu,rudi,руди,видео,вместе,аниме,фильмы,zzedovec,online,fix,онлайн,фикс,truckersmp,linux,launcher,quinstaller,installer,установщик,лаунчер,тракерсмп,линукс">
+        <meta name="google-site-verification" content="UutQlA91HJhaLPnVkAvEFUOopxLVi8PvJ2yFEepI1Qs" />
+        <meta name="description" content="Официальный сайт разработчика queinu — Rudi, TruckersMP Launcher, OnlineFix Linux, quInstaller и другие приложения для вашего удобства." />
+        <meta name="keywords" content="queinu,rudi,руди,видео,вместе,аниме,фильмы,zzedovec,online,fix,онлайн,фикс,truckersmp,linux,launcher,quinstaller,installer,установщик,лаунчер,тракерсмп,линукс" />
         <title>queinu</title>
         <link rel="stylesheet" type="text/css" href="css/style.css">
         <link rel="icon" type="image/x-icon" href="https://zzedovec.github.io/icons/queinuappsportalicon.ico">
