--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta name="robots" content="index, follow" />
         <meta name="yandex-verification" content="b1b3bced4fd04aa7" />
         <meta name="google-site-verification" content="UutQlA91HJhaLPnVkAvEFUOopxLVi8PvJ2yFEepI1Qs" />
+        <meta name="msvalidate.01" content="37510A23CFC71028055199BACFFE8799" />
         <meta name="description" content="Официальный сайт разработчика queinu — Rudi, TruckersMP Launcher, OnlineFix Linux, quInstaller и другие приложения для вашего удобства." />
         <meta name="keywords" content="queinu,rudi,руди,видео,вместе,аниме,фильмы,zzedovec,online,fix,онлайн,фикс,truckersmp,linux,launcher,quinstaller,installer,установщик,лаунчер,тракерсмп,линукс" />
         <title>queinu</title>
